# nifty-option-trading-bot

./: .gitignore  README.md  pyproject.toml
src/nifty_option_trading_bot/: __main__.py  backtest.py  calendar.py  data.py  evaluation.py  features.py  indicators.py  model.py  options.py  plotting.py  sentiment.py  strategy.py
tests/: test_calendar.py  test_options.py  test_plot_split.py
